# fantazio.eu

./: .gitignore  blog.opam  dune-project
assets/css/: diff.css  dune.css  ocaml.css  reset.css  style.css
assets/reports/dca/opam/: dca.out
assets/reports/dca_opam/: dca.1.2.0_opam.2.5.1.err
assets/templates/: article.html  index.html  layout.html  page.html
content/: 404.md
content/articles/: dca_opam.md  my_first_article.md  my_second_article.md  static_analysis_ocaml.md
content/pages/: a_first_article.md  about.md  contact.md
content/reports/dca_opam/: dca.1.2.0_opam.2.5.1_informed.md  dca.1.2.0_opam.2.5.1_naive.md  detailed_cleanup.md  index.md
content/reports/ocsf/: dca_2026-02-24.md
